# nes.rs

./: Cargo.toml  readme.md  rustfmt.toml
exemples/: snake_game_6502.asm
src/: beytecode.rs  cpu.rs  lib.rs  main.rs  memory.rs  opcode.rs
tests/: cpu_test.rs
