[package]
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
name = "nintendo-system"
version = "0.1.0"
edition = "2021"
description = "A nintendo entertainment system (aka NES) emulator"
license = "MIT"

[lib]
name = "nes"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
